--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -40,7 +40,7 @@
   <ItemGroup>
     <Compile Include="ILogger.cs" />
     <Compile Include="Message.cs" />
-    <Compile Include="RemoteBase.cs" />
+    <Compile Include="RemoteSide.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
