--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -43,6 +43,7 @@
     <Compile Include="ConsoleLogger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Unit.cs" />
     <Compile Include="World.cs" />
   </ItemGroup>
   <ItemGroup>
