--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -44,6 +44,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Unit.cs" />
+    <Compile Include="Grid.cs" />
+    <Compile Include="UnitMover.cs" />
     <Compile Include="World.cs" />
   </ItemGroup>
   <ItemGroup>
