--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -41,10 +41,12 @@
   <ItemGroup>
     <Compile Include="ClientAcceptor.cs" />
     <Compile Include="ConsoleLogger.cs" />
+    <Compile Include="Int2.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Unit.cs" />
     <Compile Include="Grid.cs" />
+    <Compile Include="PathFinding.cs" />
     <Compile Include="UnitMover.cs" />
     <Compile Include="World.cs" />
   </ItemGroup>
