--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -39,6 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ILogger.cs" />
+    <Compile Include="UnitId.cs" />
     <Compile Include="Int2.cs" />
     <Compile Include="Message.cs" />
     <Compile Include="RemoteSide.cs" />
