Implement position interpolation on the client

--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Compile Include="ILogger.cs" />
     <Compile Include="Float2.cs" />
+    <Compile Include="Consts.cs" />
     <Compile Include="UnitId.cs" />
     <Compile Include="Int2.cs" />
     <Compile Include="Message.cs" />
